update package json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "rauschen",
+    "name": "simple-fork",
     "preferGlobal": "true",
     "version": "0.0.0",
     "author": "Thomas Peklak <thomas.peklak@gmail.com>",
@@ -11,12 +11,6 @@
         }
     ],
     "scripts": {
-        "start" : {
-            "receiver" : "node receiver",
-            "processor" : "node processor",
-            "analyser" : "node analyser"
-        },
-        "test": "node_modules/mocha/bin/mocha"
     },
     "main": "./index.js",
     "repository": {
@@ -30,31 +24,8 @@
         "monitor"
     ],
     "dependencies" : {
-        "express"             : "*"
-        , "scuttlebutt"       : "*"
-        , "ecstatic"          : "*"
-        , "geoip"             : "*"
-        , "useragent"         : "*"
-        , "through"           : "*"
-        , "pause-stream"      : "*"
-        , "event-stream"      : "*"
-        , "stream-serializer" : "*"
-        , "mongodb"           : "*"
-        , "shoe"              : "*"
-        , "jade"              : ">0.0.1"
-        , "connect-mongo"     : "0.3.x"
-        , "mongoskin"         : "0.5.x"
     },
     "devDependencies": {
-        "coffee-script" : "*"
-        , "mocha"       : "*"
-        , "should"      : "*"
-        , "sinon"       : "*"
-        , "supertest"   : "*"
-        , "zombie"      : "*"
-        , "growl"       : "*"
-        , "forever"     : "*"
-        , "request"     : "*"
     },
     "bundleDependencies": [
     ],
